--- a/src/common/styles/colors.scss
+++ b/src/common/styles/colors.scss
@@ -57,7 +57,7 @@
     --neutral-alpha-80: rgba(0, 0, 0, 0.8);
     --neutral-alpha-90: rgba(0, 0, 0, 0.9);
     // Outcome colors
-    --positive-outcome: #107c10;
+    --positive-outcome: #228722;
     --negative-outcome: #e81123;
     --neutral-outcome: var(--neutral-60);
     --incomplete-color: var(--neutral-60);
