--- a/src/views/content/content.scss
+++ b/src/views/content/content.scss
@@ -188,22 +188,6 @@
         }
     }
 
-    .do-header,
-    .pass-header {
-        .check-container {
-            border-color: $do-color;
-            background-color: $do-color;
-        }
-    }
-
-    .dont-header,
-    .fail-header {
-        .check-container {
-            border-color: $dont-color;
-            background-color: $dont-color;
-        }
-    }
-
     .do-section,
     .pass-section,
     .pass-example {
@@ -223,21 +207,21 @@
     }
 
     .do-header {
-        @include check-icon-styles($icon-size, 0px);
+        @include check-icon-styles($icon-size, 0px, $do-color);
         border-bottom: 2px solid $do-color;
     }
 
     .dont-header {
-        @include cross-icon-styles($icon-size, 0px);
+        @include cross-icon-styles($icon-size, 0px, $dont-color);
         border-bottom: 2px solid $dont-color;
     }
 
     .pass-header {
-        @include check-icon-styles(12px, 0px);
+        @include check-icon-styles(12px, 0px, $do-color);
     }
 
     .fail-header {
-        @include cross-icon-styles(12px, 0px);
+        @include cross-icon-styles(12px, 0px, $dont-color);
     }
 
     .table {
